--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hakemha.github.io/FCC-Drum-Machine",
+  "homepage": "https://hakemha.github.io/test-thing",
   "name": "fcc-drum-machine",
   "private": true,
   "version": "0.0.0",
