--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hakemha.github.io/test-thing",
+  "homepage": "https://hakemha.github.io/fcc-drum-machine",
   "name": "fcc-drum-machine",
   "private": true,
   "version": "0.0.0",
